# Tetris

./: .gitignore  CMakeLists.txt  README.md
3rd/kcp/: CMakeLists.txt  ikcp.h
3rd/protobuf/: CMakeLists.txt  tetris.pb.cc  tetris.pb.h  tetris.proto
3rd/qslog/: CMakeLists.txt  QsLog.cpp  QsLog.h  QsLogDestConsole.cpp  QsLogDestFile.cpp  QsLogDestFunctor.cpp
3rd/simplecrypt/: CMakeLists.txt  simplecrypt.cpp  simplecrypt.h
server/: CMakeLists.txt  game.cpp  game.h  global.cpp  global.h  main.cpp  server.cpp  server.h  tetris.proto
tetris/: CMakeLists.txt  game.cpp  game.h  gamewindow.cpp  gamewindow.h  global.cpp  global.h  helpwindow.cpp  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
